--- a/src/app/dynamic/dynamic.component.html
+++ b/src/app/dynamic/dynamic.component.html
@@ -1,6 +1,5 @@
 <div>
-    <label>Show Employee Table</label>
-    <app-box (event)="togglefunc($event)"></app-box>
+    <app-box (event)="togglefunc($event)" [messageRecieved]="message"></app-box>
     <div *ngIf="receivedToggle === true">
     <table>
             <td>{{headerTable[0]}}</td>
