--- a/src/app/box/box.component.html
+++ b/src/app/box/box.component.html
@@ -1,3 +1,7 @@
+<div>
+  <label>{{messageRecieved}}</label>
+</div>
+<br><br>
 <label class="switch">
     <input type="checkbox" (change)="showToggle()">
     <span class="slider round"></span>
