All changes post session 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
 <h1>WELCOME !</h1>
-<router-outlet></router-outlet>
+<!-- <app-base>
+    <span class="baseNum">Base Number 1 </span><br><br>
+</app-base>
+<app-base>
+    <span class="baseNum">Base Number 2 </span><br><br>
+</app-base> -->
+
+<app-base>
+    <span style ="color: blue" class="baseNum">Base Number 1 </span><br><br>
+</app-base>
+<app-base>
+    <span class="baseNum">Base Number 2 </span><br><br>
+</app-base>
+
