--- a/src/app/box/box.component.html
+++ b/src/app/box/box.component.html
@@ -1,5 +1,5 @@
 <div>
-  <label>{{messageRecieved}}</label>
+  <label>{{messageRecieved}} {{jack}}</label>
 </div>
 <br><br>
 <label class="switch">
