--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -1,6 +1,7 @@
 
     <div class="smallForm">
         <span [style]="color">{{title}}</span><br><br>
+        <ng-content select=".baseNum"></ng-content>
         <input type="text" id="'area" (change)="addText($event)" /> &nbsp;&nbsp;&nbsp;<a>Oninit Random Number : {{random}}</a><br><br>
         <button (click)="removeText()">Clear Text</button> <br><br>
         <label id = 'mySpan' style="background-color:wheat;">{{textfromArea}}</label><br><br>
